# STALIN-OS-cpt-edition

./: CMakeLists.txt  README.md  apache.py  atilo-un.py  chmodattr.py  chroot.c  chroot.py  color.h  compilers.c  compilers.py  contacts.py  cpdir.py  cpfile.py  exec.py  filecheck.py  fileinfo.py  fileman.c  fileman.py  games.c  games.py  geomac.py  git.py  grep.py  grub.c  grub.py  inspack.py  install.sh  lsattr.py  man.py  mitmproxy.py  mkdir.py  mkfile.py  mvfile.py  netcat.py  nettools.c  nettools.py  nmap.py  ofaa.py  ofte.py  ottools.c  (+27 more)
recovery/: CMakeLists.txt  add.py  initialize.sh  recovery.c  recovery.py
