add_executable(grub grub.c)
add_executable(select select.c)
add_executable(pacman pacman.c)
add_executable(chroot chroot.c)
add_executable(games games.c)
add_executable(nettools nettools.c)
add_executable(compilers compilers.c)
add_executable(texteditors texteditors.c)
add_executable(smsbombers smsbombers.c)
add_executable(ottools ottools.c)
add_executable(fileman fileman.c)
add_executable(terminal terminal.c)
add_executable(system system.c)
